# money-counter

./: .env  .gitignore  pyproject.toml  requirements.txt
fastapi-service/: .env  main.py  pyproject.toml
fastapi-service/src/: app.py  config.py
fastapi-service/src/cv_models/: config.py  router.py
fastapi-service/src/database/: config.py  sqlalchemy.py
fastapi-service/src/rq/: config.py  dependencies.py  tasks.py  worker_settings.py
grpc-cv-service/: main.py  pyproject.toml
grpc-cv-service/src/cv_models/: enums.py
grpc-cv-service/src/cv_models/core/: yolo8model.py
money_counter_protos/: pyproject.toml
money_counter_protos/proto/: cv.proto
requirements/: requirements.txt
src/: app.py  config.py  configs.py  main.py  tasks.py  utils.py
src/background_tasks/: tasks.py
src/background_tasks/dramatiq/: app.py  tasks.py
src/cv_models/: api.py  dependencies.py  enums.py  models.py  repositories.py  router.py  schemas.py  services.py  use_cases.py
src/cv_models/core/: yolo8model.py
src/cv_models/cv_processing/: YOLO8Model.py  best_classifier.pt  classifier.pt  model.py  yolo8model.py
src/database/: config.py  crud.py  database.py  repositories.py
src/database/orm/sqlalchemy/: models.py  (+2 more)
src/images/: repositories.py  schemas.py
src/roles/: schemas.py
src/users/: api.py  dependencies.py  models.py  repositories.py  router.py  schemas.py  services.py
src/utils/: repository.py
telegram-bot/: main.py  pyproject.toml
telegram-bot/src/: configs.py  dependencies.py  fsms.py  repositories.py  services.py
telegram-bot/src/commands/: start.py
(+4 files in other folders)
